--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -18,19 +18,11 @@
 </head>
 <body>
     <div th:fragment="sidebar(param1)" class="col-2 mt-4 text-center" style="width:15%; position:fixed; z-index:1000;" id="sideBar" onmouseleave="check()">
-        <div class="row menu" style="height : 7vh; line-height: 7vh;" th:classappend="${param1} == 'dash' ? 'link' : 'white'">
-            <div class="col-3 ms-4 ps-3">
-                <i class="bi bi-grid-1x2-fill fs-4"></i>
-            </div>
-            <div class="col-6 ps-2 fs-5 sidebarItem">
-                대시보드
-            </div>
-        </div>
         <a class="row menu" style="height : 7vh; line-height: 7vh;" th:classappend="${param1} == 'dash' ? 'link' : 'white'">
                 <div class="col-3 ms-4 ps-3">
                     <i class="bi bi-grid-1x2-fill fs-4"></i>
                 </div>
-                <div class="col-6 ps-2 fs-5 sidebarItem">
+                <div class="col-6 fs-5 sidebarItem">
                     대시보드
                 </div>
         </a>
@@ -38,7 +30,7 @@
             <div class="col-3 ms-4 mt-1 ps-3">
                 <i class="fa-solid fa-location-dot fs-4"></i>
             </div>
-            <div class="col-6 fs-5 mt-1 ps-0 sidebarItem">
+            <div class="col-6 fs-5 mt-1 sidebarItem">
                 지점 관리
             </div>
         </a>
@@ -46,15 +38,15 @@
             <div class="col-3 ms-4 mt-2 ps-3">
                 <i class="fa-solid fa-share-nodes fs-4"></i>
             </div>
-            <div class="col-6 fs-5 mt-1 ps-0 sidebarItem">
-                간선 관리
+            <div class="col-6 fs-5 mt-1 sidebarItem">
+                경로 관리
             </div>
         </a>
         <a href="#" class="row menu" style="height : 7vh; line-height: 7vh;" th:classappend="${param1} == 'edgeTest' ? 'link' : 'white'">
             <div class="col-3 ms-4 mt-2 ps-3">
                 <i class="fa-solid fa-map-pin fs-4"></i>
             </div>
-            <div class="col-6 fs-5 mt-1 ps-2 sidebarItem">
+            <div class="col-6 fs-5 mt-1 sidebarItem">
                 경로 테스트
             </div>
         </a>
@@ -62,7 +54,7 @@
             <div class="col-3 ms-4 mt-1 ps-3">
                 <i class="bi bi-cpu-fill fs-4"></i>
             </div>
-            <div class="col-6 fs-5 mt-1 text-start ps-4 ms-2 sidebarItem">
+            <div class="col-6 fs-5 mt-1 sidebarItem">
                 AI 관리
             </div>
         </a>
@@ -70,7 +62,7 @@
             <div class="col-3 ms-4 mt-2 ps-3">
                 <i class="fa-solid fa-building fs-4"></i>
             </div>
-            <div class="col-6 fs-5 mt-1 ps-1 sidebarItem">
+            <div class="col-6 fs-5 mt-1 sidebarItem">
                 건물 관리
             </div>
         </a>
@@ -78,7 +70,7 @@
             <div class="col-3 ms-4 mt-2 ps-3">
                 <i class="fa-regular fa-calendar-check fs-4"></i>
             </div>
-            <div class="col-6 fs-5 mt-1 ps-1 sidebarItem">
+            <div class="col-6 fs-5 mt-1 sidebarItem">
                 행사 관리
             </div>
         </a>
@@ -86,7 +78,7 @@
             <div class="col-3 ms-4 mt-2 ps-3">
                 <i class="fa-solid fa-users fs-4"></i>
             </div>
-            <div class="col-6 fs-5 mt-1 ps-2 sidebarItem">
+            <div class="col-6 fs-5 mt-1 sidebarItem">
                 사용자 관리
             </div>
         </a>
@@ -94,7 +86,7 @@
             <div class="col-3 ms-4 mt-2 ps-3">
                 <i class="fa-solid fa-person-circle-question fs-2 ps-1"></i>
             </div>
-            <div class="col-6 fs-5 mt-1 ps-1 sidebarItem">
+            <div class="col-6 fs-5 mt-1 sidebarItem">
                 문의 관리
             </div>
         </a>
@@ -102,42 +94,143 @@
             <div class="col-3 ms-4 mt-2 ps-3">
                 <i class="fa-solid fa-server fs-4"></i>
             </div>
-            <div class="col-6 fs-5 mt-1 ps-1 sidebarItem">
+            <div class="col-6 fs-5 mt-1 sidebarItem">
                 로그 관리
             </div>
         </a>
         <div class="row mt-5 pt-5 align-items-end">
             <div class="col">
-                <p class="text-break text-secondary fs-6 sidebarItem">
+                <p class="text-break text-secondary fs-6 sidebarItem" style="position: absolute; top: 115%;">
                     Copyright@2024 가천대학교 F2Z. <br>All rights reserved.
                 </p>
             </div>
         </div>
     </div>
-    <header th:fragment="header" class="row text-center pb-1" style="background-color: white; width:100%; height:7%; position:fixed; z-index:1100; margin-top:0; padding-top:0">
+    <header th:fragment="header" class="row text-center pb-1" style="background-color: white; width:100%; height:10%; position:fixed; z-index:1100; margin-top:0; padding-top:0">
         <div class="col-2 ms-0">
             <img src="/image/Gach_homepage_main.png" width="280rem" style="margin-right : 15%;" alt="경로 오류 발생">
         </div>
         <div class="col-2 mt-4">
             <div class="search">
-                <input type="text" class="form-control form-input" placeholder="Search anything...">
+                <input type="text" class="form-control form-input mt-2 ms-4" style="border-radius: 0;" id="search" placeholder="Search anything...">
+                <div id="relatedKeywords" class="ms-4">
+                </div>
             </div>
         </div>
         <div class="col offset-5 mt-4">
-            <span class="translate-middle badge rounded-pill" style="position:absolute; top:34%; left:82.4%; background-color: rgb(220, 38,38);">
+            <span class="translate-middle badge rounded-pill" style="position:absolute; top:25%; left:82.4%; background-color: rgb(220, 38,38);">
                 32+
                 <span class="visually-hidden">unread messages</span>
             </span>
-            <a href="#" class="text-center" data-bs-toggle="tooltip" data-bs-title="처리하지 않은 문의" data-bs-placement="bottom" style="color:black"><i class="bi bi-bell-fill fs-3"></i></a>
-            <span class="translate-middle badge rounded-pill" style="position:absolute; top:34%; left:86.5%; background-color: rgb(220, 38,38);">
+            <i class="bi bi-bell-fill fs-3"></i>
+            <span th:text="|${waiterListSize}+|" class="translate-middle badge rounded-pill" style="position:absolute; top:25%; left:86.5%; background-color: rgb(220, 38,38);">
                 3+
                 <span class="visually-hidden">unread messages</span>
             </span>
-            <a href="/admin/list" th:href="@{/admin/list}" class="text-center ms-5" data-bs-toggle="tooltip" data-bs-title="관리자 설정" data-bs-placement="bottom" style="color:black;"><i class="bi bi-gear-fill fs-3"></i></a>
-            <a href="#" class="text-center ms-5" data-bs-toggle="tooltip" data-bs-title="로그아웃" data-bs-placement="bottom" style="color:black"><i class="bi bi-door-closed-fill fs-3"></i></a>
-            <a href="#" class="text-center ms-5" data-bs-toggle="tooltip" data-bs-title="관리자 로그인" data-bs-placement="bottom" style="color:black"><i class="bi bi-person-fill fs-3"></i>
+            <a href="/admin/list" th:href="@{/admin/list}" class="text-center ms-5" style="color:black;"><i class="bi bi-gear-fill fs-3"></i></a>
+            <a href="/admin/main-page" class="text-center ms-5" style="color:black;">
+                <i class="bi bi-door-closed-fill fs-3"></i>
             </a>
+            <i class="bi bi-person-fill fs-3 ms-5"></i>
         </div>
     </header>
+<script th:fragment="search">
+    document.getElementById("search").addEventListener("keydown", function(){
+        let str = document.getElementById("search").value.toLowerCase(); // 입력한 문자열을 소문자로 변환하여 비교
+        let relatedKeywords = []; // 연관 검색어를 저장할 배열
+
+        let nodeList = ["노드 관리", "노드 목록", "노드 추가"];
+        let lineList = ["경로 관리", "경로 목록", "경로 추가"];
+        let userList = ["사용자 관리", "사용자 목록"];
+        let adminList = ["관리자 설정"];
+        let eventList = ["이벤트 관리", "이벤트 추가"];
+
+        // 각 배열을 순회하면서 입력한 문자열로 시작하는 요소를 연관 검색어로 추가
+        nodeList.forEach(item => {
+            if (item.toLowerCase().startsWith(str)) {
+                relatedKeywords.push(item);
+            }
+        });
+
+        lineList.forEach(item => {
+            if (item.toLowerCase().startsWith(str)) {
+                relatedKeywords.push(item);
+            }
+        });
+
+        userList.forEach(item => {
+            if (item.toLowerCase().startsWith(str)) {
+                relatedKeywords.push(item);
+            }
+        });
+
+        adminList.forEach(item => {
+            if (item.toLowerCase().startsWith(str)) {
+                relatedKeywords.push(item);
+            }
+        });
+
+        eventList.forEach(item => {
+            if (item.toLowerCase().startsWith(str)) {
+                relatedKeywords.push(item);
+            }
+        });
+
+        // 연관 검색어 배열을 문자열로 변환하여 화면에 출력
+        let relatedKeywordsHTML = relatedKeywords.map(keyword => `<a href="#">${keyword}</a>`).join("<br>");
+        document.getElementById("relatedKeywords").innerHTML = relatedKeywordsHTML;
+    });
+    document.getElementById("search").addEventListener("keyup", function(){
+        let str = document.getElementById("search").value.toLowerCase(); // 입력한 문자열을 소문자로 변환하여 비교
+        let relatedKeywords = []; // 연관 검색어를 저장할 배열
+
+        let nodeList = ["노드 관리", "노드 목록", "노드 추가"];
+        let lineList = ["경로 관리", "경로 목록", "경로 추가"];
+        let userList = ["사용자 관리", "사용자 목록"];
+        let adminList = ["관리자 설정"];
+        let eventList = ["이벤트 관리", "이벤트 추가"];
+
+        // 각 배열을 순회하면서 입력한 문자열로 시작하는 요소를 연관 검색어로 추가
+        nodeList.forEach(item => {
+            if (item.toLowerCase().startsWith(str)) {
+                relatedKeywords.push(item);
+            }
+        });
+
+        lineList.forEach(item => {
+            if (item.toLowerCase().startsWith(str)) {
+                relatedKeywords.push(item);
+            }
+        });
+
+        userList.forEach(item => {
+            if (item.toLowerCase().startsWith(str)) {
+                relatedKeywords.push(item);
+            }
+        });
+
+        adminList.forEach(item => {
+            if (item.toLowerCase().startsWith(str)) {
+                relatedKeywords.push(item);
+            }
+        });
+
+        eventList.forEach(item => {
+            if (item.toLowerCase().startsWith(str)) {
+                relatedKeywords.push(item);
+            }
+        });
+
+        // 연관 검색어 배열을 문자열로 변환하여 화면에 출력
+        let relatedKeywordsHTML = relatedKeywords.map(keyword => `<a href="#">${keyword}</a>`).join("<br>")
+        document.getElementById("relatedKeywords").innerHTML = relatedKeywordsHTML;
+    });
+    document.getElementById("search").addEventListener("blur", function(){
+        document.getElementById("relatedKeywords").style.visibility = 'hidden';
+    });
+    document.getElementById("search").addEventListener("mouseover", function(){
+        document.getElementById("relatedKeywords").style.visibility = 'visible';
+    });
+</script>
 </body>
 </html>
