--- a/src/main/resources/templates/user/user-manage.html
+++ b/src/main/resources/templates/user/user-manage.html
@@ -9,19 +9,29 @@
 <div class="container-fluid">
     <header th:replace="~{/fragment :: header}"></header>
     <div class="row">
-        <div th:replace="~{fragment :: sidebar('edge')}"></div>
-        <div class="col-10" style="background-color: rgb(242,248,250); width: 85%; margin-left:15%; margin-top:5%;">
+        <div th:replace="~{fragment :: sidebar('user')}"></div>
+        <div class="col-10" style="background-color: rgb(242,248,250); width: 85%; margin-left:15%; margin-top : 5%">
             <div class="container-fluid mt-4 p-0" style="background-color: rgb(242,248,250);">
                 <div class="row ms-5 mb-3 mt-2 nodeHeader">
-                    관리자 > 경로 관리 > 경로 목록 조회
+                    관리자 > 사용자 관리 >  사용자 목록 조회
                 </div>
                 <div class="row mb-4 ms-5 fs-1 fontHv">
-                    경로이슈
+                    <div class="col-3">
+                        <span>사용자 이슈</span>
+                        <span onclick="changeUp()" id="changeButton"><i class="bi bi-arrow-up-square-fill fs-2" id="button"></i></span>
+                    </div>
                 </div>
-                <div class="row text-center">
+                <div class="row text-center" id="temp">
                     <div class="col-4 ps-5">
                         <div class="shadow p-3 mb-5 text-start rounded" style="background-color: white;">
-                            <p class="fs-4 ms-3 nodeHeader">문의가 등록된 경로</p>
+                            <div class="row">
+                                <div class="col-1 ms-4 ps-1 rounded" style="background-color:rgb(17, 232, 247);">
+                                    <i class="fa-solid fa-user-plus fs-4 pt-2 me-5" style="color:white;"></i>
+                                </div>
+                                <div class="col">
+                                    <span class="fs-4 ms-3 nodeHeader">일일 신규 가입자 수</span>
+                                </div>
+                            </div>
                             <hr>
                             <div>
                                 <canvas id="myChart1"></canvas>
@@ -30,7 +40,14 @@
                     </div>
                     <div class="col-4 ps-5">
                         <div class="shadow p-3 mb-5 text-start rounded" style="background-color: white;">
-                            <p class="fs-4 ms-3 nodeHeader">만족도가 낮게 평가된 경로</p>
+                            <div class="row">
+                                <div class="col-1 ms-4 ps-1 rounded" style="background-color:rgb(100, 191, 247);">
+                                    <i class="fa-solid fa-user-check fs-4 pt-2 me-5" style="color:white;"></i>
+                                </div>
+                                <div class="col">
+                                    <span class="fs-4 ms-3 nodeHeader">일일 접속자 수</span>
+                                </div>
+                            </div>
                             <hr>
                             <div>
                                 <canvas id="myChart2"></canvas>
@@ -40,24 +57,24 @@
                     <div class="col-4 ps-5">
                         <div class="row w-75">
                             <div class="shadow p-3 mb-1 text-start rounded" style="background-color: white;">
-                                <p class="fs-4 nodeHeader">총 경로 수</p>
+                                <p class="fs-4 nodeHeader">총 회원가입 수</p>
                                 <hr>
                                 <div class="row">
-                                    <div class="col-2 fs-1 ms-3 ps-2 rounded-4" style="background-color: rgb(163, 230, 53);"><i class="bi bi-clipboard-check" style="color:white;"></i></div>
+                                    <div class="col-2 fs-1 ms-3 ps-1 rounded-4" style="background-color: rgb(163, 230, 53);"><i class="fa-solid fa-users" style="color:white;"></i></div>
                                     <div class="col-9 fs-1 ms-2 ps-0 text-center">
-                                        <span class="fs-1">400&nbsp;</span><span class="fs-4" style="color:rgb(203, 213, 225)">경로</span>
+                                        <span class="fs-1">143&nbsp;</span><span class="fs-4" style="color:rgb(203, 213, 225)">/&nbsp;명</span>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="row w-75">
                             <div class="shadow p-3 mt-1 text-start rounded" style="background-color: white;">
-                                <p class="fs-4 nodeHeader">미 사용 경로 수</p>
+                                <p class="fs-4 nodeHeader">일일 접속자수</p>
                                 <hr>
                                 <div class="row">
-                                    <div class="col-2 fs-1 ms-3 ps-2 me-0 pe-0 rounded" style="background-color: rgb(110, 231, 183);"><i class="fa-regular fa-message" style="color:white"></i></div>
+                                    <div class="col-2 fs-1 ms-3 ps-3 me-0 pe-0 rounded" style="background-color: rgb(110, 231, 183);"><i class="fa-solid fa-percent" style="color : white;"></i></div>
                                     <div class="col-9 fs-1 ms-2 ps-0 text-center">
-                                        45<span class="fs-4" style="color:rgb(203, 213, 225)">경로</span>
+                                        45<span class="fs-4" style="color:rgb(203, 213, 225)">%</span>
                                     </div>
                                 </div>
                             </div>
@@ -67,7 +84,7 @@
                 <div class="row ms-1">
                     <div class="col-11 ms-5" style="width:88%;">
                         <div class="row mb-3 fs-1 fontHv">
-                            경로목록
+                            사용자목록
                         </div>
                         <div class="row bg-white">
                             <div class="col-5 align-items-center">
@@ -76,49 +93,29 @@
                                 </div>
                             </div>
                             <div class="col-3 offset-4 align-items-center text-end">
-                                <a type="submit" class="mt-3 btn btn-primary add" href="/admin/line/add" th:href="@{/admin/line/add}">경로 추가</a>
                             </div>
                         </div>
-                        <div class="row" style="overflow-x: scroll; height:40vh">
+                        <div class="row">
                             <table class="table table-hover text-center rounded">
                                 <thead>
                                 <tr>
-                                    <th scope="col">간선 이름</th>
-                                    <th scope="col">시작 노드</th>
-                                    <th scope="col">종료 노드</th>
-                                    <th scope="col">최단경로 가중치</th>
-                                    <th scope="col">최적경로 가중치</th>
-                                    <th scope="col">삭제</th>
+                                    <th scope="col">아이디</th>
+                                    <th scope="col">닉네임</th>
+                                    <th scope="col">성별</th>
+                                    <th scope="col">출생년도</th>
+                                    <th scope="col">키</th>
+                                    <th scope="col">몸무게</th>
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr th:each="line : ${lineList}">
-                                    <td th:text="${line.getLineName()}">Mark</td>
-                                    <td th:text="${line.getNodeNameFirst()}">Otto</td>
-                                    <td th:text="${line.getNodeNameSecond()}">@mdo</td>
-                                    <td th:text="${line.getWeightShortest()}">@mdo</td>
-                                    <td th:text="${line.getWeightOptimal()}">@mdo</td>
-                                    <td>
-                                        <a class="bi bi-x-lg" data-bs-toggle="modal" data-bs-target="#exampleModal"></a>
-                                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                            <div class="modal-dialog modal-dialog-centered">
-                                                <div class="modal-content">
-                                                    <div class="modal-header">
-                                                        <h1 class="modal-title fs-5" id="exampleModalLabel">경로 삭제</h1>
-                                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                                    </div>
-                                                    <div class="modal-body">
-                                                        정말 삭제하시겠습니까?
-                                                    </div>
-                                                    <div class="modal-footer">
-                                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
-                                                        <a type="button" class="btn btn-danger" th:href="@{'/admin/line/'+${line.getLineId()}}">삭제</a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </td>
-                                </tr>
+                                    <tr th:each="user : ${userList}" th:onclick="|location.href='@{/admin/users/{id}(id=${user.getUsername()})}'|">
+                                        <td th:text="${user.getUsername()}">Mark</td>
+                                        <td th:text="${user.getUserNickname()}">Otto</td>
+                                        <td th:text="${user.getUserGender()}">@mdo</td>
+                                        <td th:text="${user.getUserBirth()}">@mdo</td>
+                                        <td th:text="${user.getUserHeight()}">@mdo</td>
+                                        <td th:text="${user.getUserWeight()}">@mdo</td>
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
@@ -147,8 +144,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
+        </div>    </div>
 </div>
 <script>
     let rows = document.getElementsByClassName('row menu');
@@ -231,6 +227,19 @@
             }
         }
     });
+</script>
+<script>
+    function changeUp(){
+        document.getElementById("temp").style.display = 'none';
+        document.getElementById("button").className = "bi bi-arrow-down-square-fill fs-2";
+        document.getElementById("changeButton").onclick = changeDown;
+    }
+
+    function changeDown(){
+        document.getElementById("temp").style.display = 'flex';
+        document.getElementById("button").className = "bi bi-arrow-up-square-fill fs-2";
+        document.getElementById("changeButton").onclick = changeUp;
+    }
 </script>
 </body>
 </html>
