--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -66,7 +66,7 @@
                 건물 관리
             </div>
         </a>
-        <a href="/admin/event" th:href="@{/admin/event}"  class="row menu" style="height : 7vh; line-height: 7vh;" th:classappend="${param1} == 'event' ? 'link' : 'white'">
+        <a href="/admin/event" th:href="@{/admin/event/list/0}"  class="row menu" style="height : 7vh; line-height: 7vh;" th:classappend="${param1} == 'event' ? 'link' : 'white'">
             <div class="col-3 ms-4 mt-2 ps-3">
                 <i class="fa-regular fa-calendar-check fs-4"></i>
             </div>
