--- a/src/main/resources/templates/event/event-add.html
+++ b/src/main/resources/templates/event/event-add.html
@@ -14,12 +14,12 @@
         <div class="col-10" style="background-color: rgb(242,248,250); width: 85%; margin-left:15%; margin-top:5%;">
             <div class="container-fluid mt-4 p-0" style="background-color: rgb(242,248,250);">
                 <div class="row ms-5 mb-3 mt-2 nodeHeader">
-                    관리자 > 행사 관리 > 행사 추가
+                    관리자 > 행사 관리 > 행사 추가 및 수정
                 </div>
                 <div class="row ms-1">
                     <div class="col-11 ms-5" style="width:88%;">
                         <div class="row mb-3 fs-1 fontHv">
-                            행사 추가
+                            행사 추가 및 수정
                         </div>
                         <div class="row p-4">
                             <form enctype="multipart/form-data" th:action="@{/admin/event}" th:object="${eventDto}" method="post">
@@ -39,12 +39,12 @@
                                         </div>
                                         <div class="row">
                                             <div class="col">
-                                                <p class="fs-4 nodeHeader">시작 시간</p>
+                                                <p class="fs-4 nodeHeader">시작 날짜</p>
                                                 <hr>
                                                 <input th:field="*{eventStartDate}" type="date" class="form-control fontHv mt-0 pt-0 fs-6">
                                             </div>
                                             <div class="col">
-                                                <p class="fs-4 nodeHeader">종료 시간</p>
+                                                <p class="fs-4 nodeHeader">종료 날짜</p>
                                                 <hr>
                                                 <input th:field="*{eventEndDate}" type="date" class="form-control fontHv mt-0 pt-0 fs-6">
                                             </div>
